<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/aaa"
    android:layout_height="match_parent"
    android:padding="4dp">


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="295dp"
        android:layout_height="256dp"
        app:layout_constraintBottom_toTopOf="@+id/cardview_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.257"
        app:srcCompat="@drawable/confirmation" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="554dp"
        android:orientation="vertical"
        android:text="@string/your_cart"
        android:textColor="#FF5722"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardview_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_layout" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Placed"
        android:textColor="#FF5722"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardview_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_cart"
        android:layout_width="398dp"
        android:layout_height="83dp"
        android:layout_alignBottom="@id/Cart_Page_RecyclerView"
        android:layout_marginBottom="4dp"
        android:visibility="visible"
        app:cardBackgroundColor="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Cart_Page_RecyclerView"
            android:layout_alignStart="@+id/Cart_Page_RecyclerView">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_below="@+id/linearLayout"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/square_round_corner_1"

                android:text="Exit"
                android:textAllCaps="false"
                android:textColor="#FF9800"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/cart_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"


        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/enter_address"
            android:textColor="#FF9800"
            android:textSize="15sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/cart_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="15dp"

            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="#848484"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/spinner_payment"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/speciality_container"
            android:layout_marginBottom="16dp">

        </Spinner>

        <View
            android:id="@+id/mrgn"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/title"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@color/black" />


        <Button
            android:id="@+id/place_order"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@+id/linearLayout"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/square_corner_round_transparent"
            android:text="@string/place_orderr"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>